
= KEY ====================
	# Breaks back-compat
	! Feature
	- Bugfix
		+ Sub-comment
	. Internal change
==========================


2.0-rc2
# Tao is now the Okatea core namespace so old oktInc/classes
where moved to oktInc/Tao and follow psr-0
# remove oktCore::redirect
# remove methods deprecated in 1.0
! show debug mode enabled info
! remove unused dev and debug panels from config page


2.0-rc1
# introduce composer components
	# remove oktInc/vendor
	! doctrine/dbal 2.5.*@dev
	! dotclear/clearbricks dev-default
	! erusev/parsedown dev-master
	! ezyang/htmlpurifier dev-master
	! ircmaxell/password-compat dev-master
	! leafo/lessphp 0.4.*
	! masterexploder/phpthumb dev-master
	! mobiledetect/mobiledetectlib dev-master
	! simplepie/simplepie dev-master
	! swiftmailer/swiftmailer 5.1.*@dev
	! symfony/debug 2.3.*@dev
	! symfony/templating 2.5.*@dev
	! symfony/yaml 2.5.*@dev
# remove minify lib
# remove oktDebug class
# remove internal autoloader, now use composer autoloader instead
# all modules bumped to version 2.0-rc1


1.0 (2013-11-26)
! improve perfs by replacing somes functions by PHP natives ones
! add captchas to estimate module


1.0.BETA.5 (2013-11-24)
# new famfamfam sprites (replace previous ones)
! new tinyMCE 4 module
! new estimate module
! superadmin can now remove admin logs
- bug fixes introduced in the previous beta
- remove buggy switch admin view feature
- fix jQuery UI upload custom theme
. deletion of old stuff


1.0.BETA.4 (2013-11-14)
# refactor variables names of emails configuration
! can now use external links in navigation menus
! add navigation items proper recordset
! HTML5 Shiv 3.7.0
! jQuery mousewheel 3.1.4
! jQuery Spectrum Colorpicker 1.1.2
- website title and emails addresses are required
- fix news URL
- fix pcre bug on windows
. deletion of old stuff


1.0.BETA.3 (2013-11-05)
! new breadcrumb policy
! introduce flash messages
! introduce navigation menus management
! Okatea theme changes
! CodeMirror 3.19