@@ -11,6 +11,7 @@ if (!defined('OKT_INSTAL_PROCESS')) die;
 
 use Tao\Admin\Page;
 use Tao\Themes\Collection as ThemesCollection;
+use Guzzle\Http\Client;
 
 
 /* Initialisations
@@ -83,14 +84,15 @@ else if ((!empty($_GET['repository']) && !empty($_GET['theme']) && $okt->config-
 
 		try
 		{
-			$client = netHttp::initClient($url,$path);
-			$client->setUserAgent('Okatea');
-			$client->useGzip(false);
-			$client->setPersistReferers(false);
-			$client->setOutput($dest);
-			$client->get($path);
+			$client = new Client();
+
+			$request = $client->get($url, array(), array(
+				'save_to' => $dest
+			));
+
+			$request->send();
 		}
-		catch( Exception $e) {
+		catch (Exception $e) {
 			throw new Exception(__('An error occurred while downloading the file.'));
 		}
 
