@@ -18,6 +18,7 @@ use Tao\Admin\Page;
 use Tao\Misc\Utilities as util;
 use Tao\Forms\StaticFormElements as form;
 use Tao\Themes\Collection as ThemesCollection;
+use Guzzle\Http\Client;
 
 
 # Accès direct interdit
@@ -76,12 +77,13 @@ if ((!empty($_POST['upload_pkg']) && !empty($_FILES['pkg_file'])) ||
 
 			try
 			{
-				$client = netHttp::initClient($url,$path);
-				$client->setUserAgent('Okatea');
-				$client->useGzip(false);
-				$client->setPersistReferers(false);
-				$client->setOutput($dest);
-				$client->get($path);
+				$client = new Client();
+
+				$request = $client->get($url, array(), array(
+					'save_to' => $dest
+				));
+
+				$request->send();
 			}
 			catch( Exception $e) {
 				throw new Exception(__('An error occurred while downloading the file.'));
